--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eject": "react-scripts eject",
     "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
     "dev:start": "nodemon ./server-build/index.js",
-    "dev": "npm-run-all --parallel build dev:*"
+    "dev": "npm run delete && npm-run-all --parallel build dev:*",
+    "delete": "del-cli --force ./server-build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +49,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "del-cli": "^3.0.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.42.0",
