--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "PORT=4000 react-app-rewired start",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
